plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.9'
	id 'io.spring.dependency-management' version '1.1.4'
	id "org.asciidoctor.jvm.convert" version "3.3.2"
}

ext {
	queryDslVersion = "6.11"
	springCloudVersion = "2022.0.5"
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

compileTestJava.options.encoding = 'UTF-8'
compileTestJava.options.compilerArgs += ['-parameters']

compileJava {
	options.compilerArgs += ['-parameters']
	options.encoding = 'UTF-8'
}

configurations {
	asciidoctorExt
	compileOnly {
		extendsFrom annotationProcessor
	}
}

allprojects {
	group = 'bottlenote'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}

	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21
	}

	sourceSets {
		main {
			resources {
				srcDirs = [
						'src/main/resources',
						'../git.environment-variables'
				]
			}
		}
	}

}

dependencies {
	implementation project(':bottlenote-core')
	testImplementation project(':bottlenote-core')

	implementation project(':bottlenote-api-client')
	testImplementation project(':bottlenote-api-client')

	runtimeOnly project(':bottlenote-batch')
	testRuntimeOnly project(':bottlenote-batch')

	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.testng:testng:7.7.0'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// lombok
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	//p6spy
	//implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
	implementation 'p6spy:p6spy:3.9.1'

	//db-json
	implementation 'io.hypersistence:hypersistence-utils-hibernate-60:3.7.3'

	//querydsl 설정 추가
	//implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	//annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	//annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	//annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// 안전한 OpenFeign 의존성들
	implementation "io.github.openfeign.querydsl:querydsl-jpa:${queryDslVersion}"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	// spring rest docs
	asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// Cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation "com.github.ben-manes.caffeine:caffeine:3.1.8"

	//Mockito-inline
	testImplementation 'org.mockito:mockito-inline:3.4.0'

	//AWS
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.725'

	//Fegin ( https://spring.io/projects/spring-cloud#overview )
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	//apache commons
	implementation 'org.apache.commons:commons-lang3:3.12.0'

	//test containers
	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
	testImplementation 'org.testcontainers:testcontainers:1.19.8'
	testImplementation 'org.testcontainers:junit-jupiter:1.19.0'
	testImplementation "org.testcontainers:mysql:1.19.0"

	//firebase
	implementation 'com.google.firebase:firebase-admin:9.4.3'

	//rule engine
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.0'

	// Quartz 스케줄러
	implementation 'org.springframework.boot:spring-boot-starter-quartz'

	// 기타 필요한 라이브러리
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// logback
	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
}

subprojects {
	apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	dependencies {
		// default spring boot dependencies
		implementation 'org.springframework.boot:spring-boot-starter'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
		implementation 'org.springframework.boot:spring-boot-configuration-processor'

		// default  utilities
		implementation 'org.apache.commons:commons-lang3:3.12.0'
		implementation 'com.google.guava:guava:31.1-jre'

		// default lombok
		implementation 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
	}

	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21
	}

	bootJar.enabled = false
	jar.enabled = true
	tasks.named('test') { useJUnitPlatform() }

	test {
		outputs.upToDateWhen { false }
		useJUnitPlatform()
		testLogging {
			events "passed", "skipped", "failed"
			showStandardStreams = true
			exceptionFormat = 'full'
			showExceptions = true
			showCauses = true
			showStackTraces = true
		}
	}
}

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'data-jpa-test', 'integration'
	}
}
tasks.register('integrationTest', Test) {
	useJUnitPlatform {
		includeTags 'integration'
	}
}
tasks.register('unitTest', Test) {
	useJUnitPlatform {
		includeTags 'unit'
	}
}
tasks.register('check rule', Test) {
	useJUnitPlatform {
		includeTags 'rule'
	}
}

// =========================== spring boot jar setting ===========================

bootJar {
	archiveFileName = 'app.jar' // jar 파일명 변경 ( 기본값 : ${project.name}-${project.version}.jar )
}
jar {
	enabled = false // plain jar 파일 생성 안함
}

// =========================== spring rest docs setting ===========================

ext {
	snippetsDir = file('build/generated-snippets') as File
}

test {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

asciidoctor {
	inputs.dir snippetsDir
	configurations 'asciidoctorExt'
	dependsOn test
	sources {
		include("**/index.adoc")
	}
	baseDirFollowsSourceFile()
}

tasks.register('copyRestDocs', Copy) {
	dependsOn asciidoctor
	from file("build/docs/asciidoc/index.html")
	into 'docs'
}

build {
	dependsOn copyRestDocs
}

// =========================== query DSL  ===========================

// Querydsl 설정부
def generated = 'src/main/generated'

// querydsl QClass 파일 생성 위치를 지정
tasks.withType(JavaCompile).configureEach {
	options.getGeneratedSourceOutputDirectory().set(file(generated))
}

// java source set 에 querydsl QClass 위치 추가
sourceSets {
	main {
		java.srcDirs += [generated]
		resources {
			srcDirs = [
					'src/main/resources',
					'git.environment-variables',
					'git.environment-variables/springboot',
					'git.environment-variables/storage'
			]
		}
	}
}

// gradle clean 시에 QClass 디렉토리 삭제
clean {
	delete file(generated)
	subprojects.each { sub ->
		clean.dependsOn(sub.tasks.matching { it.name == 'clean' })
		clean.doFirst {
			delete file("${sub.projectDir}/src/main/generated")
		}
	}
}
